deps/crates/vendor/serde_json/tests/ui/missing_value.stderr
error: unexpected end of macro invocation
 --> tests/ui/missing_value.rs:4:5
  |
4 |     json!({ "a" : });
  |     ^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match `@`
 --> src/macros.rs
  |
  |     (@array [$($elems:expr,)*]) => {
  |      ^
  = note: this error originates in the macro `$crate::json_internal` which comes from the expansion of the macro `json` (in Nightly builds, run with -Z macro-backtrace for more info)
